# naia

./: .gitignore  Cargo.toml
.github/workflows/: main.yml
adapters/bevy/client/: Cargo.toml
adapters/bevy/client/src/: client.rs  components.rs  plugin.rs  state.rs
adapters/bevy/server/: Cargo.toml
adapters/bevy/server/src/: commands.rs  entity_mut.rs  server.rs  state.rs
adapters/bevy/shared/: Cargo.toml
adapters/bevy/shared/src/: component_access.rs  world_data.rs  world_proxy.rs
adapters/hecs/client/: Cargo.toml
adapters/hecs/server/: Cargo.toml
adapters/hecs/shared/: Cargo.toml
client/: Cargo.toml
client/src/: entity_ref.rs
demos/basic/client/app/: Cargo.toml
demos/basic/client/miniquad/: Cargo.toml
demos/bevy/: Dockerfile  Makefile  README.md  docker-compose.yaml
demos/bevy/client/: Cargo.toml
demos/bevy/server/: Cargo.toml
demos/bevy/server/src/systems/: init.rs
demos/bevy/shared/: Cargo.toml
demos/bevy/shared/src/: shared.rs
demos/hecs/client/: Cargo.toml
demos/hecs/server/: Cargo.toml
demos/socket/client/app/: Cargo.toml
demos/socket/client/miniquad/: Cargo.toml
derive/: Cargo.toml
derive/src/: replicate.rs
server/: Cargo.toml
server/src/: entity_ref.rs  server.rs
shared/: Cargo.toml
shared/src/: protocol_type.rs  world_type.rs
socket/client/: Cargo.toml
