[workspace]
members = [
    "client",
    "server",
    "shared",
    "derive",
    "adapters/hecs/client",
    "adapters/hecs/server",
    "adapters/hecs/shared",
    "adapters/bevy/client",
    "adapters/bevy/server",
    "adapters/bevy/shared",
    ]

[patch.crates-io]
bevy = {git = "https://github.com/oscrim/bevy.git", branch = "0.5.0-wgpu-fix"}